--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,4 @@
-# .env.template
-
-# This is a template for your .env file
-# Copy this file and rename it to `.env`, then fill in the actual values
+# .env
 
 # ------------------
 # --- app config ---
@@ -16,19 +13,21 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 # --- OTP config ---
 # Use this function to generate a OTP_SECRET_KEY:
-# ```from pyotp import random_base32
-# print(random_base32())```
-OTP_SECRET_KEY = "67XKYPCGFC47RJLZAEMDM6PIRJFWOT2P"
-OTP_EXPIRE_SECONDS = 360
+# from pyotp import random_base32
+# print(random_base32())
+OTP_SECRET_KEY="67XKYPCGFC47RJLZAEMDM6PIRJFWOT2P"
+OTP_EXPIRE_SECONDS=360
 
 # --------------------
 # --- email config ---
 # --------------------
 
+# These values are ignored when USE_LOCAL_FALLBACK is true
 SMTP_SERVER=mail.example.com
 SMTP_PORT=587
 SMTP_USERNAME=your_email@example.com
 SMTP_PASSWORD=your_email_password
 
-# set `USE_LOCAL_FALLBACK=True` if you dont have a SMTP server.
-USE_LOCAL_FALLBACK=false
+# Use fallback during development (emails will be printed to console)
+USE_LOCAL_FALLBACK=true
+
