--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:admin@localhost:5432/fast_store
+sqlalchemy.url = postgresql://postgres:postgres@localhost:5432/fastapi-shop-db
 
 
 [post_write_hooks]
